--- a/lib/skeleton/config/cucumber.yml
+++ b/lib/skeleton/config/cucumber.yml
@@ -1,7 +1,7 @@
 # config/cucumber.yml
 ##YAML Template
 ---
-android: PLATFORM=android -r features/support -r features/android -r features/step_definitions
+android: PLATFORM=android -r features/support -r features/android -r features/step_definitions --exclude features/ios
 
 
-ios: PLATFORM=ios -r features/support -r features/ios -r features/step_definitions
+ios: PLATFORM=ios -r features/support -r features/ios -r features/step_definitions --exclude features/android
