--- a/lib/skeleton/Gemfile
+++ b/lib/skeleton/Gemfile
@@ -1,15 +1,14 @@
 # Gemfile to help setting up the initial development environment
-source "https://rubygems.org"
+source 'https://rubygems.org'
 
 gem 'calabash-common', '~> 0.0.1'
 gem 'calabash-android', '~> 0.5.5'
 
 # Gems that will only be used with the computer is a Mac
 group :mac_os do
-  # Rementer to fix a calabash-cucumber version. The update of this gem is a proccess
-  # that you need to update de Calabash Server on your iOS application code. So I suggest
-  # doing the update manually
+  # Rementer to fix a calabash-cucumber version. The update of this gem is
+  # a proccessthat you need to update de Calabash Server on your iOS
+  # application code. So I suggest doing the update manually
   gem 'calabash-cucumber', '~> 0.12.2'
   gem 'cocoapods', '~> 0.35.0'
 end
-
