--- a/lib/skeleton/Gemfile
+++ b/lib/skeleton/Gemfile
@@ -2,13 +2,13 @@
 source 'https://rubygems.org'
 
 gem 'calabash-common', '~> 0.0.1'
-gem 'calabash-android', '~> 0.5.5'
+gem 'calabash-android', '~> 0.5.14'
 
 # Gems that will only be used with the computer is a Mac
 group :mac_os do
-  # Rementer to fix a calabash-cucumber version. The update of this gem is
-  # a proccessthat you need to update de Calabash Server on your iOS
+  # Remenber to fix the calabash-cucumber version. The update of this gem is
+  # a proccess that you need to update the Calabash Server on your iOS
   # application code. So I suggest doing the update manually
-  gem 'calabash-cucumber', '~> 0.12.2'
+  gem 'calabash-cucumber', '~> 0.16.4'
   gem 'cocoapods', '~> 0.35.0'
 end
