fixed two simple misspelled words

--- a/lib/skeleton/Gemfile
+++ b/lib/skeleton/Gemfile
@@ -6,8 +6,8 @@ gem 'calabash-android', '~> 0.5.14'
 
 # Gems that will only be used with the computer is a Mac
 group :mac_os do
-  # Remenber to fix the calabash-cucumber version. The update of this gem is
-  # a proccess that you need to update the Calabash Server on your iOS
+  # Remember to fix the calabash-cucumber version. The update of this gem is
+  # a process that you need to update the Calabash Server on your iOS
   # application code. So I suggest doing the update manually
   gem 'calabash-cucumber', '~> 0.16.4'
   gem 'cocoapods', '~> 0.35.0'
