Updated .gitignore from skeleton aaaaaaaaaaaaaaaaa
Update .gitignore to enable git to store the screenshot folders on a
generated project

--- a/lib/skeleton/.gitignore
+++ b/lib/skeleton/.gitignore
@@ -3,3 +3,7 @@ reports/*
 test_servers/*
 .DS_Store
 screenshot*.png
+screenshots/android/*
+!screenshots/android/.*
+screenshots/ios/*
+!screenshots/ios/.*
