--- a/lib/skeleton/Gemfile
+++ b/lib/skeleton/Gemfile
@@ -2,5 +2,6 @@
 source 'https://rubygems.org'
 
 gem 'calabash-common'
-gem 'calabash-android', '~> 0.7.0'
-gem 'calabash-cucumber', '~> 0.19.0'
+gem 'calabash-android', '~> 0.7'
+gem 'calabash-cucumber', '~> 0.19'
+gem 'sunomono', '~> 0.2'
