--- a/lib/skeleton/Gemfile
+++ b/lib/skeleton/Gemfile
@@ -2,6 +2,7 @@
 source 'https://rubygems.org'
 
 gem 'calabash-common'
-gem 'calabash-android', '~> 0.7'
-gem 'calabash-cucumber', '~> 0.19'
-gem 'sunomono', '~> 0.2'
+gem 'calabash-android'
+gem 'calabash-cucumber'
+gem 'sunomono'
+gem 'pry'
