--- a/lib/skeleton_appium/Gemfile
+++ b/lib/skeleton_appium/Gemfile
@@ -1,8 +1,8 @@
 # Gemfile to help setting up the initial development environment
 source 'https://rubygems.org'
 
-gem 'calabash-common'
-gem 'calabash-android'
-gem 'calabash-cucumber'
+gem 'appium_lib'
+gem 'appium_console'
+gem "cucumber"
 gem 'sunomono'
 gem 'pry'
